--- a/src/app/catalog/catalog.html
+++ b/src/app/catalog/catalog.html
@@ -1,38 +1,21 @@
 <div class="container">
   <div class="filters">
-    <a class="button" (click)="filter = 'Heads'">Heads</a>
+    <a class="button bold" (click)="filter = 'Heads'">Heads</a>
     <a class="button" (click)="filter = 'Arms'">Arms</a>
     <a class="button" (click)="filter = 'Torsos'">Torsos</a>
     <a class="button" (click)="filter = 'Bases'">Bases</a>
     <a class="button" (click)="filter = ''">All</a>
   </div>
 
+
   <ul class="products">
     @for (product of getFilteredProducts(); track product?.id) {
     <li class="product-item">
-      <div class="product">
-        <div class="product-details">
-          <img [src]="getImageUrl(product)" [alt]="product?.name" />
-          <div class="product-info">
-            <div class="name">{{product?.name}}</div>
-            <div class="description">{{product?.description}}</div>
-            <div class="category">Part Type: {{product?.category}}</div>
-          </div>
-        </div>
-        <div class="price">
-          @if (product.discount === 0) {
-            <div>{{product?.price | currency: 'USD'}}</div>
-          }
-          @if (product.discount !== 0) {
-            <div class="discount">
-            {{(product.price * (1 - product.discount)) | currency: 'USD'}}
-          </div>
-          }
-          
-          <button class="cta">Buy</button>
-        </div>
-      </div>
+      <app-product-details [product]="product"></app-product-details>
     </li>
-  }
+    }
+
   </ul>
+
+
 </div>
